--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="img/portfolio/homeone.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>HomeOne</h4>
-                        <p class="text-muted">Front-End Development</p>
+                        <p class="text-muted">Home Automation Platform</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -117,11 +117,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="img/portfolio/journey.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Journey</h4>
-                        <p class="text-muted">Full-Stack Development</p>
+                        <p class="text-muted">Client Management System</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -131,11 +131,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="img/portfolio/whirlwind.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Whirlwind Weather</h4>
-                        <p class="text-muted">Front-End Development</p>
+                        <p class="text-muted">Aesthetic Weather Application</p>
                     </div>
                 </div>
             </div>
@@ -434,18 +434,15 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate,
-                                    maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <h2>HomeOne</h2>
+                                <p class="item-intro text-muted">A Self-Managed Home Automation System.</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/homeone2.png" alt="">
+                                <p>HomeOne is a home analytics and automation tool developed by myself and three others while attending DevMountain. </p>
                                 <p>
-                                    <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can
-                                    purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+                                    You can explore the site <a href="http://homeone.tech/#/">here</a>.</p>
                                 <ul class="list-inline">
-                                    <li>Date: July 2014</li>
-                                    <li>Client: Round Icons</li>
-                                    <li>Category: Graphic Design</li>
+                                    <li>Date: September 2016</li>
+                                    <li>Category: SEAN Stack (SQL, ExpressJS, AngularJS, NodeJS)</li>
                                 </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
@@ -470,12 +467,15 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Project Heading</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                                <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily
-                                    be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                                <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
+                                <h2>Journey</h2>
+                                <p class="item-intro text-muted">A Client Management System for Youth Case Workers.</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/journey2.png" alt="">
+                                <p>Journey is a client management system designed specifically for Case Workers involved in managing at-risk youth. It's a central location for data-sharing between those involved in the youth's treatment.</p>
+                                <p>You can preview Journey <a href="steven-isbell.github.io/streamalong">here</a>.</p>
+                                <ul class="list-inline">
+                                    <li>Date: August 2016</li>
+                                    <li>Category: SEAN Stack (SQL, ExpressJS, AngularJS, NodeJS)</li>
+                                </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -500,12 +500,15 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-                                <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or
-                                    other projects.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
+                                <h2>PWhirlWind Weather</h2>
+                                <p class="item-intro text-muted">An Aesthetic Weather Application</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/whirlwind2.png" alt="">
+                                <p></p>
+                                <p>You can checkout the application <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">here</a>. Be sure to load the scripts due to googles tightened restrictions on data served over http.</p>
+                                <ul class="list-inline">
+                                    <li>Date: July 2016</li>
+                                    <li>Category: AngularJS Web Application</li>
+                                </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -516,7 +519,7 @@
     </div>
 
     <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -528,9 +531,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
+                            <div class="modal-body"> -->
+    <!-- Project Details Go Here -->
+    <!-- <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
                                 <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made
@@ -543,10 +546,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -558,9 +561,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
+                            <div class="modal-body"> -->
+    <!-- Project Details Go Here -->
+    <!-- <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
                                 <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking
@@ -573,10 +576,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -588,9 +591,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
+                            <div class="modal-body"> -->
+    <!-- Project Details Go Here -->
+    <!-- <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
                                 <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed
@@ -603,7 +606,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -620,6 +623,11 @@
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
+
+</body>
+
+</html>
+min.js"></script>
 
 </body>
 
