--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
-    <link href='//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
+    <link href='css/devicons.css' rel='stylesheet'>
     <link rel="shortcut icon" href="img/favicon.ico" media="screen" title="no title">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/5.3.2/sweetalert2.min.css">
 
@@ -168,14 +168,8 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <span class="devicons devicons-bootstrap"></span>
-                        <p class="text-muted">Bootstrap</p>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <i class="devicons devicons-responsive"></i>
-                        <p class="text-muted">Responsive Design</p>
+                        <span class="devicons devicons-python"></span>
+                        <p class="text-muted">Python</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
@@ -186,26 +180,14 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <span class="devicons devicons-jquery"></span>
-                        <p class="text-muted">jQuery</p>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="team-member">
                         <span class="devicons devicons-angular"></span>
                         <p class="text-muted">Angular</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <span class="devicons devicons-postgresql"></span>
-                        <p class="text-muted">SQL</p>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <span class="devicons devicons-git"></span>
-                        <p class="text-muted">Git</p>
+                        <span class="devicons devicons-react"></span>
+                        <p class="text-muted">React</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
@@ -222,14 +204,44 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <span class="devicons devicons-sass"></span>
-                        <p class="text-muted">SASS</p>
+                        <span class="devicons devicons-postgresql"></span>
+                        <p class="text-muted">SQL</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <i class="devicons devicons-gulp"></i>
-                        <p class="text-muted">Gulp</p>
+                        <span class="devicons devicons-jquery"></span>
+                        <p class="text-muted">jQuery</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <span class="devicons devicons-git"></span>
+                        <p class="text-muted">Git</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <i class="devicons devicons-atlassian"></i>
+                        <p class="text-muted">Collaboration Tools</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <span class="devicons devicons-grunt"></span>
+                        <p class="text-muted">Build Tools</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <span class="devicons devicons-sass"></span>
+                        <p class="text-muted">CSS Pre-Processors</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <i class="devicons devicons-responsive"></i>
+                        <p class="text-muted">Responsive Design</p>
                     </div>
                 </div>
                 <div class="col-sm-3 addition">
@@ -260,8 +272,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 text-center">
                         <p class="large text-muted">I was born and raised in the great Pacific Northwest. I have a diverse professional background including farming, banking, and youth services. I have fallen in love with web development and have made it not just a passion, but
-                            a career. The continued emergence of new technologies, frameworks, and languages is exciting and makes this a fantastic time to be on this career path! I'm a full-stack developer with a preference for front-end development
-                            and design. I'm excited to continue learning and growing as a developer. Please feel free to drop me a line with any questions, tips, or opportunities!</p>
+                            a career. The continued emergence of new technologies, frameworks, and languages is exciting and makes this a fantastic time to be in this field. I'm currently working as a full-stack developer for <a href="https://www.zefr.com">Zefr, Inc.</a>,
+                            and as a part time mentor teaching at the <a href="https://www.devmountain.com">DevMountain</a> coding bootcamp in Provo, Utah.
+                            Please feel free to drop me a line with any questions, tips, or opportunities!</p>
                     </div>
                 </div>
                 <div class="resume">
