missing some buttons and icons

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Steven Isbell</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Paul Murff</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,7 +81,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Steven Isbell</div>
+                <div class="intro-heading">Paul Murff</div>
                 <div class="intro-lead-in">Full-Stack Web Developer</div>
             </div>
         </div>
@@ -104,11 +104,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="portfolio-img" src="img/portfolio/homeone.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="img/toyota.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>HomeOne</h4>
-                        <p class="text-muted">Home Automation Platform</p>
+                        <h4>Toyota.com Clone</h4>
+                        <p class="text-muted">Build and Price Shop Experience</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -118,11 +118,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="portfolio-img" src="img/portfolio/journey.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="img/app.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Journey</h4>
-                        <p class="text-muted">Client Management System</p>
+                        <h4>Charmi</h4>
+                        <p class="text-muted">Mobile Dating App</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -132,11 +132,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="portfolio-img" src="img/portfolio/whirlwind.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="img/nasa.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Whirlwind Weather</h4>
-                        <p class="text-muted">Aesthetic Weather Application</p>
+                        <h4>Fun with NASA API</h4>
+                        <p class="text-muted">Exploring Space Travel</p>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <span class="devicons devicons-python"></span>
+                        <span class="devicons devicon-gulp-plain"></span>
                         <p class="text-muted">Python</p>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
                         <span class="devicons devicons-react"></span>
-                        <p class="text-muted">React</p>
+                        <p class="text-muted">React/React Native</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
@@ -228,7 +228,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <span class="devicons devicons-grunt"></span>
+                        <span class="devicons devicon-gulp-plain"></span>
                         <p class="text-muted">Build Tools</p>
                     </div>
                 </div>
@@ -271,9 +271,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 text-center">
-                        <p class="large text-muted">I was born and raised in the great Pacific Northwest. I have a diverse professional background including farming, banking, and youth services. I have fallen in love with web development and have made it not just a passion, but
-                            a career. The continued emergence of new technologies, frameworks, and languages is exciting and makes this a fantastic time to be in this field. I'm currently working as a full-stack developer for <a href="https://www.zefr.com">Zefr, Inc.</a>,
-                            and as a part time mentor teaching at the <a href="https://www.devmountain.com">DevMountain</a> coding bootcamp in Provo, Utah.
+                        <p class="large text-muted">I was born and raised in the great state of Utah. I have a diverse professional background including teaching, sales, insurance and have rich volunteer experience. I have fallen in love with web development and have made it not just a passion, but
+                            a career. The continued emergence of new technologies, frameworks, and languages is exciting and makes this a fantastic time to be in this field. 
                             Please feel free to drop me a line with any questions, tips, or opportunities!</p>
                     </div>
                 </div>
@@ -332,15 +331,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; stevenisbell.io 2016</span>
+                    <span class="copyright">Copyright &copy; paulmurff.com 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://github.com/steven-isbell"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/murffious"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="https://www.facebook.com/steven.isbell.9"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/paul.murff.7"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/steven-isbell"><i class="fa fa-linkedin"></i></a>
+                        <li><a href=" https://www.linkedin.com/in/paul-murff/"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
