--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <title>My Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="public/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="css/agency.min.css" rel="stylesheet">
-    <link href='css/devicons.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="img/favicon.ico" media="screen" title="no title">
+    <link href="public/css/agency.min.css" rel="stylesheet">
+    <link href='public/css/devicons.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="public/img/favicon.ico" media="screen" title="no title">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/5.3.2/sweetalert2.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -505,15 +505,15 @@
 
     <!-- Angular Setup -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script src="app/app.js"></script>
-    <script src="app/mainCtrl.js"></script>
-    <script src="app/mainSrvc.js"></script>
+    <script src="public/app/app.js"></script>
+    <script src="public/app/mainCtrl.js"></script>
+    <script src="public/app/mainSrvc.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/agency.min.js"></script>
+    <script src="public/js/agency.min.js"></script>
 
 </body>
 
