trying to update published

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="portfolio-img" src="img/toyota.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="public/img/toyota.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Toyota.com Clone</h4>
@@ -121,7 +121,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="portfolio-img" src="img/app.jpg" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="public/img/Charmi3.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Charmi</h4>
@@ -137,7 +137,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="portfolio-img" src="img/nasa.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="public/img/nasa.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Fun with NASA API</h4>
@@ -274,7 +274,7 @@
             <div class="row center-img">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/me.jpg" class="img-responsive img-circle" alt="profile">
+                        <img src="public/img/me.jpg" class="img-responsive img-circle" alt="profile">
                     </div>
                 </div>
                 <div class="row">
@@ -413,7 +413,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Toyota.com Clone</h2>
                                 <p class="item-intro text-muted">A clone of the "build and price" experience on Toyota's offical site.</p>
-                                <img class="img-responsive img-centered" src="img/toyotatacomabuild.png" alt="">
+                                <img class="img-responsive img-centered" src="public/img/toyotatacomabuild.png" alt="">
                                 <p>I developed this site based off the purpose to get a customer to actually have an experience similar to going to a dealership and picking out a car to drive. The end goal is for a person to buy the car at a dealership by emailing their info and "build" to a dealer. </p>
                                 <p>
                                     You can explore the site <a href="http://www.paulmurff.com">here</a>.</p>
@@ -446,7 +446,7 @@
                             <div class="modal-body">
                                 <h2>Charmi</h2>
                                 <p class="item-intro text-muted">A mobile-web based dating application modeled after apps like Tinder or Mutual.</p>
-                                <img class="img-responsive img-centered" src="img/Charmi.png" alt="">
+                                <img class="img-responsive img-centered" src="public/img/Charmi1.png" alt="">
                                 <p>Charmi is desgined with mobile use in mind.  This partiucular styling was designed for an iPhone 6 Plus specifically in mind. Users can login with Auth0 (Gmail, Facebook etc.) and search profiles. Users can like or pass on profiles and then messages those they match with.</p>
                                 <p>You can preview Charmi <a href="">here</a>.</p>
                                 <ul class="list-inline">
@@ -477,8 +477,8 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>WhirlWind Weather</h2>
-                                <p class="item-intro text-muted">An Aesthetic Weather Application</p>
+                                <h2>Space Travel Explorer</h2>
+                                <p class="item-intro text-muted">A fun site using the NASA API</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/whirlwind2.png" alt="">
                                 <p></p>
                                 <p>You can checkout the application <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">here</a>.
