--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                     <div class="portfolio-caption">
                         <h4>Charmi</h4>
                         <p class="text-muted">Mobile Dating App</p>
-                        <a class="btn btn-primary btn-sm" href="#" role="button">GITHUB</a>
-                        <a class="btn btn-primary btn-sm" href="#" role="button">VIDEO TOUR</a>
+                        <a class="btn btn-primary btn-sm" href="https://github.com/Team-Overkill/Charmi-React" target="_blank" role="button">GITHUB</a>
+                        <a class="btn btn-primary btn-sm" href="https://youtu.be/ZnkR-ij2TzU" target="_blank" role="button">VIDEO TOUR</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
